# libcosmic

./: .gitignore  CMakeLists.txt  README.md
include/cosmic/: cosmic_any.h  cosmic_dmap.h  cosmic_io.h  cosmic_io_fs.h  cosmic_io_mem.h  cosmic_iterator.h  cosmic_json.h  cosmic_lib.h  cosmic_list.h  cosmic_llist.h  cosmic_map.h  cosmic_socket.h  cosmic_vector.h
include/internal/: cosmic_io.h  cosmic_iterator.h  cosmic_json.h  cosmic_list.h  cosmic_map.h
library_config/: libcosmic.pc.in  uninstall.cmake
src/: cosmic_any.c  cosmic_dmap.c  cosmic_io.c  cosmic_io_fs.c  cosmic_io_mem.c  cosmic_iterator.c  cosmic_json.c  cosmic_json_read.c  cosmic_json_write.c  cosmic_list.c  cosmic_llist.c  cosmic_map.c  cosmic_socket.c  cosmic_vector.c
test/: test_json.c  test_list.c  test_map.c
tests/: test_any.c  test_base.h  test_io_mem.c  test_json.c  test_json_read.c  test_json_write.c  test_list.c  test_map.c  test_socket.c  test_vector.c
